[package]
name = "proxybroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15" }
futures = { version = "0.3" }
rust-embed = { version = "6.4.0" }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0" 
regex = "1.6.0"

# https://github.com/johnthagen/min-sized-rust
# https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
# opt-level = 3
lto = true
codegen-units = 1
panic = "abort"