# https://stackoverflow.com/questions/36604010/how-can-i-build-multiple-binaries-with-cargo
# https://stackoverflow.com/questions/27632660/how-do-i-use-conditional-compilation-with-cfg-and-cargo
# https://stackoverflow.com/a/57934551

[package]
name = "proxybroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2" }
crossbeam = { version = "0.8" }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = { version = "1.6" }
maxminddb = { version = "0.23", optional = true }

[features]
maxminddb = ["dep:maxminddb"]

# https://github.com/johnthagen/min-sized-rust
# https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"